--- a/gho.html
+++ b/gho.html
@@ -39,7 +39,9 @@
                      <div class="title4"> UI Designer, UI developer</div>
                   </div>
                   <div>
-                     <button class="content-button"><a href="https://play.google.com/store/apps/details?id=com.gho.autovias">Autovias app →</a></button>
+                     <button class="content-button"><a href="https://play.google.com/store/apps/details?id=com.gho.autovias">
+                        Autovias app →</a>
+                     </button>
                   </div>
                </div>
             </div>
@@ -59,14 +61,12 @@
       </div>
    </div>
 </div>
-
    <div class="center">
       <div class="title-component">About Autovias GHO</div>
       <div class="texto">Autovias is a small brand owned by Primera Plus that covers an important part of routes all over 
          Mexico's southeast
       </div>
    </div>
-
    <div>
       <div class="title-component">My design process </div>
       <img src="demo-images/designprocess.png" style="width: 100%";  />
@@ -96,8 +96,8 @@
                <div class="title-component">✍️New Onboarding </div>
                <div class="texto">
                   <img src="demo-images/currentonboarding.png"  />
-                  Here you can find the new onboarding interactive high-fidelity wireframe 
-                  https://marvelapp.com/prototype/d9cc4f8/screen/85543640
+                  You can find the new onboarding interactive high-fidelity wireframe 
+                  <a href='https://marvelapp.com/prototype/b29ijd9/screen/87641055'>here</a> 
                </div>
             </div>
             <div class="one_last">
@@ -106,16 +106,15 @@
                   High-fidelity interactive wireframes help clients with final design approvals, it improves testing, and hand-off to the developers in less time.
                   <br> 
                   <img src="demo-images/sketchgho.png"  />
-                  Here you can find the final high-fidelity wireframe on Marvel App here: 
-                  https://marvelapp.com/prototype/d9cc4f8/screen/85543640
+                  Here you can find the final high-fidelity wireframe on Marvel App 
+                  <a href='https://marvelapp.com/prototype/d9cc4f8/screen/85543640'>here</a> 
                </div>
             </div>
          </div>
          <div class="one_last">
             <div id="content" class="site-content content-1170 center-relative">
                <div class="title-component">🖥️Design implementation</div>
-               <div class="texto">
-               🎉Implementation of the </div>
+               <div class="texto">🎉Implementation of the final design, you can download it on Android and iOS</div>
                <img src="demo-images/ghoscreens.png"  />
                <div class="button-flex">
                <div class="texto">
