--- a/me.html
+++ b/me.html
@@ -28,49 +28,48 @@
    <div class="body-wrapper">
       <div id="content" class="site-content content-1170 center-relative">
          <div class="content-wrap">
-            <div class="grid_one">
-               <div class="one_first">
+            <div class="me_grid">
+               <div class="me_first">
                   <img class="selfie" src="demo-images/me.jpg" alt="me" />
-                                    <div class="tags">
-                  <span class="tag">🤝 Motivated to take challenges</span>
-                  <span class="tag">👁 Attention to detail</span>
-                  <span class="tag">🌿 Atomic Design thinking</span>
+                  <div class="tags">
+                     <span class="tag">🤝 sdfsdfMotivated to take challenges</span>
+                     <span class="tag">👁 Attention to detail</span>
+                     <span class="tag">🌿 Atomic Design thinking</span>
+                  </div>
                </div>
-            </div>
-               
-               <div class="one_last">
+               <div class="me_last">
                   <div class="description"> 
                      <div class="aboutme">Hey there!👋</div>
-                     <p class="texto">
-                        My name is Brenda Orozco<br>
-                        I'm a product designer at <a href="http://www.reservamossaas.com">@Reservamos Saas</a> <br>
-                     <br>
-                     </p>
-                     <p class="texto">
-                     Over the course of 6 years, I’ve sharpened my abilities to build digital products. I design using software like Sketch, Figma, and as a former graphic designer, Adobe XD and Illustrator.
-                     <br>Recently I’ve had the amazing oportunity of coding my own designs from Sketch to HTML/CSS + preprocessor Sass.
-                     I’ve been working on building components applying libraries like React (styled-components), React Native, and Storybook Elements.
-                     <br>
-                     In my free time, I love to read about technology, user interface, user experience, and design trends on Medium.
-                  </p>
-                  <div class="subtitle">My Roles</div>
-                  <ul  class="texto">
-                    <li>UI Designer — Graphic Designer — Product Designer</li>                  
-                  </ul>
-                  <div class="subtitle">Hard + Soft Skills</div>
-                  <ul  class="texto">
-                     <li>→ Adobe Creative Suite knowledge</li>
-                     <li>→ High-fidelity screen mockups</li>
-                     <li>→ Desire to constantly be learning</li>
-                     <li>→ A deep understanding of design systems</li>
-                     <li>→ Create interactive designs ready for feedback, approval and implementation</li>
-                     <li>→ Collaboration with team members</li>
-                  </ul>
+                        <p class="texto">
+                           My name is Brenda Orozco<br>
+                           I'm a product designer at <a href="http://www.reservamossaas.com">@Reservamos Saas</a> <br>
+                           <br>
+                        </p>
+                        <p class="texto">
+                           Over the course of 6 years, I’ve sharpened my abilities to build digital products. I design using software like Sketch, Figma, and as a former graphic designer, Adobe XD and Illustrator.
+                           <br>Recently I’ve had the amazing oportunity of coding my own designs from Sketch to HTML/CSS + preprocessor Sass.
+                           I’ve been working on building components applying libraries like React (styled-components), React Native, and Storybook Elements.
+                           <br>
+                           In my free time, I love to read about technology, user interface, user experience, and design trends on Medium.
+                        </p>
+                        <div class="subtitle">My Roles</div>
+                        <ul  class="texto">
+                        <li>UI Designer — Graphic Designer — Product Designer</li>                  
+                        </ul>
+                        <div class="subtitle">Hard + Soft Skills</div>
+                        <ul  class="texto">
+                           <li>→ Adobe Creative Suite knowledge</li>
+                           <li>→ High-fidelity screen mockups</li>
+                           <li>→ Desire to constantly be learning</li>
+                           <li>→ A deep understanding of design systems</li>
+                           <li>→ Create interactive designs ready for feedback, approval and implementation</li>
+                           <li>→ Collaboration with team members</li>
+                        </ul>
+                     </div>
+                  </div>
                </div>
             </div>
          </div>
-            </div>
-            </div>
       </div>
    </div>
 </div>
