--- a/components.html
+++ b/components.html
@@ -15,8 +15,16 @@
       <link rel="stylesheet" type="text/css"  href='estilosportfolio.css' />
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
-
    </head>
+   <header class="header">
+      <input class="menu-btn" type="checkbox" id="menu-btn" />
+      <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+      <ul class="menu">
+         <li><a href="./index.html" >Home</a></li>
+        <li><a href="./me.html" >About me</a></li>
+        <li><a class="link" href="./demo-images/BrendaOrozcoResume.pdf" download="BrendaOrozcoResume">My resume</a></li>
+      </ul>
+   </header>
    <div class="primeraplus-portfolio"></div>
       <div id="content" class="site-content content-1170 center-relative">
          <div class="content-wrap">
