--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
    </head>
    <title>Brenda Orozco Portfolio</title>
-
    <header class="header">
       <input class="menu-btn" type="checkbox" id="menu-btn" />
       <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
@@ -52,132 +51,61 @@
       </div>
    </div>
         <h1 class="title2">About my work</h1>
-      <div class="grid">
-         <div class="one">
-            <section class="cards">
-               <article class="card card--1">
-                  <div class="card__img"></div>
-                  <a href="./gntcapital.html" class="card_link">
-                     <div class="card__img--hover"></div>
-                     <div class="card__info">
-                        <span class="card__category"> 
-                        <h3 class="card__title">GNT Capital</h3>
-                        <span class="card__by">Cryptocurrency trading platform</span>
-                     </div>
-                  </a>
-               </article>
-            </section>
-         </div>
-         <div class="two">
-            <section class="cards">
-               <article class="card card--2">
-                  <div class="card__img"></div>
-                  <a href="./kepler.html" class="card_link">
-                     <div class="card__img--hover"></div>
-                     <div class="card__info">
-                        <span class="card__category">
-                           <h3 class="card__title">Kepler180</h3>
-                           <span class="card__by">HTML&CSS</span>
-                        </span>
-                     </div>
-                  </a>
-               </article>
-            </section>
-         </div>
-         <div class="three">
-            <section class="cards">
-               <article class="card card--3">
-                  <div class="card__img"></div>
-                  <a href="./peninsula.html" class="card_link">
-                     <div class="card__img--hover"></div>
-                     <div class="card__info">
-                        <span class="card__category">
-                           <h3 class="card__title">Peninsula Ejecutivo</h3>
-                           <span class="card__by">React styled-components</span>
-                        </span>
-                     </div>
-                  </a>
-               </article>
-            </section>
-         </div>
-         <div class="four">
-            <section class="cards">
-               <article class="card card--4">
-                  <div class="card__img"></div>
-                  <a href="./components.html" class="card_link">
-                     <div class="card__img--hover"></div>
-                     <div class="card__info">
-                        <span class="card__category">
-                           <h3 class="card__title">Primeraplus</h3>
-                           <span class="card__by">UX improvements</span>
-                        </span>
-                     </div>
-                  </a>
-               </article>
-            </section>
-         </div>
-         <div class="five">
-            <section class="cards">
-               <article class="card card--5">
-                  <div class="card__img"></div>
-                  <a href="./gho.html" class="card_link">
-                     <div class="card__img--hover"></div>
-                     <div class="card__info">
-                        <span class="card__category">
-                           <h3 class="card__title">GHO Autovias</h3>
-                           <span class="card__by">App design</span>
-                        </span>
-                     </div>
-                  </a>
-               </article>
-            </section>
-         </div>
-        </div>
-    </div>
-
-    <div >
-      <!--
-<h1 class="title2">Multidisciplary design background</h1>
-<div class="grid2">
-   <div class="five">
-      <section class="cards">
-         <article class="card card--5">
-         <div class="card__img"></div>
-            <a href="./joined.html" class="card_link">
-               <div class="card__img--hover"></div>
-               <div class="card__info">
-                  <span class="card__category">
-                     <h3 class="card__title__center">Joined</h3>
-                  </span>
+        <div class="wrapperCenter">
+            <div class="wrapperPortfolio">
+               <div class="three">
+                  <section class="cards">
+                     <article class="card card--3">
+                        <div class="card__img"></div>
+                        <a href="./peninsula.html" class="card_link">
+                           <div class="card__img--hover"></div>
+                           <div class="card__info">
+                              <span class="card__category">
+                                 <h3 class="card__title">Peninsula Ejecutivo</h3>
+                                 <span class="card__by">React styled-components</span>
+                              </span>
+                           </div>
+                        </a>
+                     </article>
+                  </section>
                </div>
-            </a>
-         </article>
-      </section>
-   </div>
-           <div class="seven">
-              <section class="cards">
-                 <article class="card card--7">
-                    <div class="card__img"></div>
-                     <a href="./efevoo.html" class="card_link">
-                       <div class="card__img--hover"></div>
-                       <div class="card__info">
-                          <span class="card__category">
-                             <h3 class="card__title__center">Efevoo</h3>
-                          </span>
-                       </div>
-                    </a>
-                  </article>
-               </section>
-           </div>
-        </div>
+               <div class="four">
+                  <section class="cards">
+                     <article class="card card--4">
+                        <div class="card__img"></div>
+                        <a href="./components.html" class="card_link">
+                           <div class="card__img--hover"></div>
+                           <div class="card__info">
+                              <span class="card__category">
+                                 <h3 class="card__title">Primeraplus</h3>
+                                 <span class="card__by">UX improvements</span>
+                              </span>
+                           </div>
+                        </a>
+                     </article>
+                  </section>
+               </div>
+               <div class="five">
+                  <section class="cards">
+                     <article class="card card--5">
+                        <div class="card__img"></div>
+                        <a href="./gho.html" class="card_link">
+                           <div class="card__img--hover"></div>
+                           <div class="card__info">
+                              <span class="card__category">
+                                 <h3 class="card__title">GHO Autovias</h3>
+                                 <span class="card__by">App design</span>
+                              </span>
+                           </div>
+                        </a>
+                     </article>
+                  </section>
+            </div>
+         </div>
+      </div>
       </div>
     </div>
-   </div>
-</div>
--->
-
-      
-    
+<div>
 </div>
 </div>
 
