--- a/me.html
+++ b/me.html
@@ -24,47 +24,49 @@
         <li><a class="link" href="./demo-images/BrendaOrozcoResume.pdf" download="BrendaOrozcoResume">My resume</a></li>
       </ul>
    </header>
-   <div class="mybackground">
-   <div class="body-wrapper">
+   <div class="mybackground"> </div>
       <div id="content" class="site-content content-1170 center-relative">
-         <div class="content-wrap">
-            <div class="me_grid">
-               <div class="me_first">
-                  <img class="selfie" src="demo-images/me.jpg" alt="me" />
-                  <div class="tags">
-                     <span class="tag">🤝 sdfsdfMotivated to take challenges</span>
-                     <span class="tag">👁 Attention to detail</span>
-                     <span class="tag">🌿 Atomic Design thinking</span>
+
+      <div class="body-wrapper">
+            <div class="content-wrap">
+               <div class="me_grid">
+                  <div class="me_first">
+                     <img class="selfie" src="demo-images/me.jpg" alt="me" />
+                     <div class="tags">
+                        <span class="tag">🤝 Motivated to take challenges</span>
+                        <span class="tag">👁 Attention to detail</span>
+                        <span class="tag">🌿 Atomic Design thinking</span>
+                     </div>
                   </div>
-               </div>
-               <div class="me_last">
-                  <div class="description"> 
-                     <div class="aboutme">Hey there!👋</div>
-                        <p class="texto">
-                           My name is Brenda Orozco<br>
-                           I'm a product designer at <a href="http://www.reservamossaas.com">@Reservamos Saas</a> <br>
-                           <br>
-                        </p>
-                        <p class="texto">
-                           Over the course of 6 years, I’ve sharpened my abilities to build digital products. I design using software like Sketch, Figma, and as a former graphic designer, Adobe XD and Illustrator.
-                           <br>Recently I’ve had the amazing oportunity of coding my own designs from Sketch to HTML/CSS + preprocessor Sass.
-                           I’ve been working on building components applying libraries like React (styled-components), React Native, and Storybook Elements.
-                           <br>
-                           In my free time, I love to read about technology, user interface, user experience, and design trends on Medium.
-                        </p>
-                        <div class="subtitle">My Roles</div>
-                        <ul  class="texto">
-                        <li>UI Designer — Graphic Designer — Product Designer</li>                  
-                        </ul>
-                        <div class="subtitle">Hard + Soft Skills</div>
-                        <ul  class="texto">
-                           <li>→ Adobe Creative Suite knowledge</li>
-                           <li>→ High-fidelity screen mockups</li>
-                           <li>→ Desire to constantly be learning</li>
-                           <li>→ A deep understanding of design systems</li>
-                           <li>→ Create interactive designs ready for feedback, approval and implementation</li>
-                           <li>→ Collaboration with team members</li>
-                        </ul>
+                  <div class="me_last">
+                     <div class="description"> 
+                        <div class="aboutme">Hey there!👋</div>
+                           <p class="texto">
+                              My name is Brenda Orozco<br>
+                              I'm a product designer at <a href="http://www.reservamossaas.com">@Reservamos Saas</a> <br>
+                              <br>
+                           </p>
+                           <p class="texto">
+                              Over the course of 6 years, I’ve sharpened my abilities to build digital products. I design using software like Sketch, Figma, and as a former graphic designer, Adobe XD and Illustrator.
+                              <br>Recently I’ve had the amazing oportunity of coding my own designs from Sketch to HTML/CSS + preprocessor Sass.
+                              I’ve been working on building components applying libraries like React (styled-components), React Native, and Storybook Elements.
+                              <br>
+                              In my free time, I love to read about technology, user interface, user experience, and design trends on Medium.
+                           </p>
+                           <div class="subtitle">My Roles</div>
+                           <ul  class="texto">
+                           <li>UI Designer — Graphic Designer — Product Designer</li>                  
+                           </ul>
+                           <div class="subtitle">Hard + Soft Skills</div>
+                           <ul  class="texto">
+                              <li>→ Adobe Creative Suite knowledge</li>
+                              <li>→ High-fidelity screen mockups</li>
+                              <li>→ Desire to constantly be learning</li>
+                              <li>→ A deep understanding of design systems</li>
+                              <li>→ Create interactive designs ready for feedback, approval and implementation</li>
+                              <li>→ Collaboration with team members</li>
+                           </ul>
+                        </div>
                      </div>
                   </div>
                </div>
@@ -72,11 +74,10 @@
          </div>
       </div>
    </div>
-</div>
    <!--Footer-->
 
    <footer class="footer">
-        <hr>
+   <hr>
         <ul>
             <li class="social-footer">
                 <a href="https://www.linkedin.com/in/brendaoro/">
@@ -90,18 +91,9 @@
                 </a>
             </li>
         </ul>
-        <hr>
-        <a href="index.html" style="font-size:30px" title="Go home">        <div class="textofooter">Go to index</div>         </i></a>
-
-
-      <div class="content-970 center-relative">
-         <ul>
-            <li class="copyright-footer">
-               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            </li>
-         </ul>
-      </div>
+   <hr>
+   <a href="index.html" style="font-size:30px" title="Go home">        
+   <div class="textofooter">Go to index</div></i></a>
    </footer>
    <!-- End .body-border -->
    </div>
