--- a/gho.html
+++ b/gho.html
@@ -35,7 +35,7 @@
                <div class="text-wrapper">
                   <div>
                      <div class="subtitle">Duration</div>
-                     <div class="title4">Two months</div>
+                     <div class="title4">One month</div>
                   </div>
                   <br>
                   <div>
@@ -59,11 +59,13 @@
                <br>
                <ul  class="texto">
                   <li>• Improve onboarding screen design.</li>
-                  <li>• Create Mobile app UI, using an established UI system.</li>
-                  <li>• Ensure all work produced adheres strictly to the brand's style guides.</li>
                   <li>• Working closely with the Product Design Lead, transforming wireframes into development-ready designs.</li>
+                  <li>• Ensure all work produced adheres strictly to the brand's style guides.</li>
+                  <li>• Create Mobile app UI, using an established UI system.</li>
                   <li>• Delivered high-fidelity early designs and mockups, allowing collaboration and sharing from the start of the design process.</li>
-                  <li>• Work with a variety of brands in the transportation industry to explore, extend and improve their customer experiences.</li>
+                  <li>• Style React Native UI components with Stylesheet.</li>
+                  <li>• Create and commit Changes to a Branch in GitHub.</li>
+                  <li>• Track my Pull Requests before merging to base.</li>
                </ul>
             </div>
          </div>
