--- a/peninsula.html
+++ b/peninsula.html
@@ -38,7 +38,7 @@
                   <div class="text-wrapper">
                      <div>
                         <div class="subtitle">Project duration</div>
-                        <div class="title4">Two months</div>
+                        <div class="title4">One month</div>
                      </div>
                      <div>
                         <div class="subtitle">Project team</div>
@@ -60,7 +60,8 @@
                <ul  class="texto">
                  <li>→ Engage users with an intuitive screen-friendly interface.</li>
                  <li>→ Create a consistent layout design that can scale up easily.</li>
-                 <li>→ Collaborate with dedicated design team focused on internal design systems</li>
+                 <li>→ Collaborate with dedicated design team focused on internal design systems.</li>
+                 <li>→ Create and manage Sketch files in Abstract.</li>
                </ul>
                <br>
                <div class="subtitle">About The Design Process:</div>
